# EA-Analyzer

./: .env.example  .gitignore  CLI_README.md  DOCKER_INTEGRATION_SUMMARY.md  ENV_CONFIGURATION.md  FRONTEND_DEVELOPMENT.md  Makefile  README.md  WEB_APP_README.md  docker-compose.dev.yml  docker-compose.yml  ea-analyzer-cli.sh  pyproject.toml  test-cli.sh
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/: __init__.py  diagrams.py  edges.py  nodes.py  queries.py
data/: basic-one-line.json  example-industrial-distribution.json  one-line-knowledge-graph.json  test.json  test_final.json  test_gpt4o.json  test_structured.json  test_structured2.json  test_structured3.json
docs/: CLI_SUMMARY.md  CURRENT_STATUS_SUMMARY.md  LLM_INTEGRATION.md  WEB_APP_README.md
examples/: neo4j_example.py
frontend/: Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  version.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/api/version/: route.ts
frontend/src/components/: AnalyzePage.tsx  CustomEdge.tsx  CustomNode.tsx  DiagramSelector.tsx  FloatingConnectionLine.tsx  FloatingEdge.tsx  GraphVisualizer.tsx  ImageViewerModal.tsx  LeftSidebar.tsx  LibraryPage.tsx  MainLayout.tsx  NavigationBar.tsx  NewAnalyzePage.tsx  NoSelectionState.tsx  UploadDiagramModal.tsx
frontend/src/lib/: api.ts  cookies.ts  getEdgeParams.ts  theme.ts
frontend/src/types/: index.ts
scripts/: checkenv.bash  health-check.sh  log.bash
src/ea_analyzer/: __init__.py  cli.py  electrical_diagram.prompt  env_config.py  graph_visualizer.py  llm_analyzer.py  models.py  neo4j_client.py  parser.py  typer_cli.py
src/ea_analyzer/database/: __init__.py  base.py  factory.py  neo4j_client.py
tests/: __init__.py  test_llm_analyzer_integration.py  test_llm_analyzer_prompt.py  test_parser.py
